--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "firebase": "^5.10.1",
     "firebaseui": "^4.0.0",
     "firebaseui-angular": "^3.4.2",
+    "leaflet": "^1.5.1",
+    "leaflet-routing-machine": "^3.2.12",
+    "leaflet-search": "^2.9.8",
     "ng2-completer": "^2.0.8",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.0.0-tactical-rc.1",
